web: Fix alignment of cards with and without images

--- a/module/web/styles/_component_card.scss
+++ b/module/web/styles/_component_card.scss
@@ -10,6 +10,9 @@
 // ---------------------------------------------------------------------------------------------------------------------
 
 main .card {
+	display: flex;
+	flex-direction: column;
+
 	width: $card-width;
 
 	border: transparent 1px solid;
@@ -36,6 +39,10 @@ main .card {
 		height: auto;
 
 		border-radius: $card-radius $card-radius 0 0;
+	}
+
+	.card-image-placeholder {
+		flex: 1 1 0;
 	}
 
 	// *-----------------------------------------------------------------------------------------------------------*
